; ModuleID = '/home/carl/AnghaBench/redis/src/extr_config.c_rewriteConfigSlaveofOption.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_config.c_rewriteConfigSlaveofOption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32*, i64 }
%struct.rewriteConfigState = type { i32 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [9 x i8] c"%s %s %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rewriteConfigSlaveofOption(%struct.rewriteConfigState* %0, i8* %1) #0 {
  %3 = alloca %struct.rewriteConfigState*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.rewriteConfigState* %0, %struct.rewriteConfigState** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 2), align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %8, %2
  %12 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @rewriteConfigMarkAsProcessed(%struct.rewriteConfigState* %12, i8* %13)
  br label %25

15:                                               ; preds = %8
  %16 = call i32 (...) @sdsempty()
  %17 = load i8*, i8** %4, align 8
  %18 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %19 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %20 = call i32 @sdscatprintf(i32 %16, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %17, i32* %18, i32 %19)
  store i32 %20, i32* %5, align 4
  %21 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %3, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @rewriteConfigRewriteLine(%struct.rewriteConfigState* %21, i8* %22, i32 %23, i32 1)
  br label %25

25:                                               ; preds = %15, %11
  ret void
}

declare dso_local i32 @rewriteConfigMarkAsProcessed(%struct.rewriteConfigState*, i8*) #1

declare dso_local i32 @sdscatprintf(i32, i8*, i8*, i32*, i32) #1

declare dso_local i32 @sdsempty(...) #1

declare dso_local i32 @rewriteConfigRewriteLine(%struct.rewriteConfigState*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
